{
  "version": 4,
  "terraform_version": "0.14.6",
  "serial": 57,
  "lineage": "f950fc9a-3767-4da0-3532-0186f0a0b8aa",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/ef5a7969-b97b-445e-ac5e-5edf463b725c/resourceGroups/deptp-rg/providers/Microsoft.Network/loadBalancers/deptp-lb/frontendIPConfigurations/deptp-public-address",
                "name": "deptp-public-address",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/ef5a7969-b97b-445e-ac5e-5edf463b725c/resourceGroups/deptp-rg/providers/Microsoft.Network/publicIPAddresses/public-ip"
              }
            ],
            "id": "/subscriptions/ef5a7969-b97b-445e-ac5e-5edf463b725c/resourceGroups/deptp-rg/providers/Microsoft.Network/loadBalancers/deptp-lb",
            "location": "westus",
            "name": "deptp-lb",
            "resource_group_name": "deptp-rg",
            "sku": "Basic",
            "tags": {
              "azlearn": "azl"
            }
          },
          "dependencies": [
            "azurerm_public_ip.pip",
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_ip_configurations": [
              "/subscriptions/ef5a7969-b97b-445e-ac5e-5edf463b725c/resourceGroups/deptp-rg/providers/Microsoft.Network/networkInterfaces/deptp-nic-0/ipConfigurations/deptp-primary",
              "/subscriptions/ef5a7969-b97b-445e-ac5e-5edf463b725c/resourceGroups/deptp-rg/providers/Microsoft.Network/networkInterfaces/deptp-nic-1/ipConfigurations/deptp-primary"
            ],
            "id": "/subscriptions/ef5a7969-b97b-445e-ac5e-5edf463b725c/resourceGroups/deptp-rg/providers/Microsoft.Network/loadBalancers/deptp-lb/backendAddressPools/deptp-backend-address-pool",
            "loadbalancer_id": "/subscriptions/ef5a7969-b97b-445e-ac5e-5edf463b725c/resourceGroups/deptp-rg/providers/Microsoft.Network/loadBalancers/deptp-lb",
            "name": "deptp-backend-address-pool",
            "resource_group_name": "deptp-rg"
          },
          "dependencies": [
            "azurerm_lb.main",
            "azurerm_public_ip.pip",
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/ef5a7969-b97b-445e-ac5e-5edf463b725c/resourceGroups/deptp-rg/providers/Microsoft.Network/networkInterfaces/deptp-nic-0",
            "internal_domain_name_suffix": "mavasnijmzmetijxblboedmcic.dx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "deptp-primary",
                "primary": true,
                "private_ip_address": "10.0.0.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/ef5a7969-b97b-445e-ac5e-5edf463b725c/resourceGroups/deptp-rg/providers/Microsoft.Network/virtualNetworks/deptp-network/subnets/internal"
              }
            ],
            "location": "westus",
            "name": "deptp-nic-0",
            "private_ip_address": "10.0.0.5",
            "private_ip_addresses": [
              "10.0.0.5"
            ],
            "resource_group_name": "deptp-rg"
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "azurerm_subnet.internal"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/ef5a7969-b97b-445e-ac5e-5edf463b725c/resourceGroups/deptp-rg/providers/Microsoft.Network/networkInterfaces/deptp-nic-1",
            "internal_domain_name_suffix": "mavasnijmzmetijxblboedmcic.dx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "deptp-primary",
                "primary": true,
                "private_ip_address": "10.0.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/ef5a7969-b97b-445e-ac5e-5edf463b725c/resourceGroups/deptp-rg/providers/Microsoft.Network/virtualNetworks/deptp-network/subnets/internal"
              }
            ],
            "location": "westus",
            "name": "deptp-nic-1",
            "private_ip_address": "10.0.0.4",
            "private_ip_addresses": [
              "10.0.0.4"
            ],
            "resource_group_name": "deptp-rg"
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "azurerm_subnet.internal"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_backend_address_pool_association",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/ef5a7969-b97b-445e-ac5e-5edf463b725c/resourceGroups/deptp-rg/providers/Microsoft.Network/loadBalancers/deptp-lb/backendAddressPools/deptp-backend-address-pool",
            "id": "/subscriptions/ef5a7969-b97b-445e-ac5e-5edf463b725c/resourceGroups/deptp-rg/providers/Microsoft.Network/networkInterfaces/deptp-nic-0/ipConfigurations/deptp-primary|/subscriptions/ef5a7969-b97b-445e-ac5e-5edf463b725c/resourceGroups/deptp-rg/providers/Microsoft.Network/loadBalancers/deptp-lb/backendAddressPools/deptp-backend-address-pool",
            "ip_configuration_name": "deptp-primary",
            "network_interface_id": "/subscriptions/ef5a7969-b97b-445e-ac5e-5edf463b725c/resourceGroups/deptp-rg/providers/Microsoft.Network/networkInterfaces/deptp-nic-0"
          },
          "dependencies": [
            "azurerm_lb.main",
            "azurerm_lb_backend_address_pool.main",
            "azurerm_network_interface.main",
            "azurerm_public_ip.pip",
            "azurerm_resource_group.main",
            "azurerm_subnet.internal",
            "azurerm_virtual_network.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/ef5a7969-b97b-445e-ac5e-5edf463b725c/resourceGroups/deptp-rg/providers/Microsoft.Network/loadBalancers/deptp-lb/backendAddressPools/deptp-backend-address-pool",
            "id": "/subscriptions/ef5a7969-b97b-445e-ac5e-5edf463b725c/resourceGroups/deptp-rg/providers/Microsoft.Network/networkInterfaces/deptp-nic-1/ipConfigurations/deptp-primary|/subscriptions/ef5a7969-b97b-445e-ac5e-5edf463b725c/resourceGroups/deptp-rg/providers/Microsoft.Network/loadBalancers/deptp-lb/backendAddressPools/deptp-backend-address-pool",
            "ip_configuration_name": "deptp-primary",
            "network_interface_id": "/subscriptions/ef5a7969-b97b-445e-ac5e-5edf463b725c/resourceGroups/deptp-rg/providers/Microsoft.Network/networkInterfaces/deptp-nic-1"
          },
          "dependencies": [
            "azurerm_lb.main",
            "azurerm_lb_backend_address_pool.main",
            "azurerm_network_interface.main",
            "azurerm_public_ip.pip",
            "azurerm_resource_group.main",
            "azurerm_subnet.internal",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "webserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ef5a7969-b97b-445e-ac5e-5edf463b725c/resourceGroups/deptp-rg/providers/Microsoft.Network/networkSecurityGroups/deptp-webserver-sg",
            "location": "westus",
            "name": "deptp-webserver-sg",
            "resource_group_name": "deptp-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "10.0.0.0/16",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "internal-inbound-rule",
                "priority": 101,
                "protocol": "Tcp",
                "source_address_prefix": "10.0.0.0/16",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "10.0.0.0/16",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "internal-outbound-rule",
                "priority": 102,
                "protocol": "Tcp",
                "source_address_prefix": "10.0.0.0/16",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Deny",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "external-rule",
                "priority": 103,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "azlearn": "azl"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "external",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Deny",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/ef5a7969-b97b-445e-ac5e-5edf463b725c/resourceGroups/deptp-rg/providers/Microsoft.Network/networkSecurityGroups/deptp-webserver-sg/securityRules/external-rule",
            "name": "external-rule",
            "network_security_group_name": "deptp-webserver-sg",
            "priority": 103,
            "protocol": "Tcp",
            "resource_group_name": "deptp-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.webserver",
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "internal-inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "10.0.0.0/16",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/ef5a7969-b97b-445e-ac5e-5edf463b725c/resourceGroups/deptp-rg/providers/Microsoft.Network/networkSecurityGroups/deptp-webserver-sg/securityRules/internal-inbound-rule",
            "name": "internal-inbound-rule",
            "network_security_group_name": "deptp-webserver-sg",
            "priority": 101,
            "protocol": "Tcp",
            "resource_group_name": "deptp-rg",
            "source_address_prefix": "10.0.0.0/16",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.webserver",
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "internal-outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "10.0.0.0/16",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Outbound",
            "id": "/subscriptions/ef5a7969-b97b-445e-ac5e-5edf463b725c/resourceGroups/deptp-rg/providers/Microsoft.Network/networkSecurityGroups/deptp-webserver-sg/securityRules/internal-outbound-rule",
            "name": "internal-outbound-rule",
            "network_security_group_name": "deptp-webserver-sg",
            "priority": 102,
            "protocol": "Tcp",
            "resource_group_name": "deptp-rg",
            "source_address_prefix": "10.0.0.0/16",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.webserver",
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/ef5a7969-b97b-445e-ac5e-5edf463b725c/resourceGroups/deptp-rg/providers/Microsoft.Network/publicIPAddresses/public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "westus",
            "name": "public-ip",
            "resource_group_name": "deptp-rg",
            "sku": "Basic",
            "tags": {
              "azlearn": "azl"
            }
          },
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.0.0/24",
            "address_prefixes": [
              "10.0.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/ef5a7969-b97b-445e-ac5e-5edf463b725c/resourceGroups/deptp-rg/providers/Microsoft.Network/virtualNetworks/deptp-network/subnets/internal",
            "name": "internal",
            "resource_group_name": "deptp-rg",
            "virtual_network_name": "deptp-network"
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/24"
            ],
            "guid": "35092a60-6609-4958-a137-0ac2e20d8242",
            "id": "/subscriptions/ef5a7969-b97b-445e-ac5e-5edf463b725c/resourceGroups/deptp-rg/providers/Microsoft.Network/virtualNetworks/deptp-network",
            "location": "westus",
            "name": "deptp-network",
            "resource_group_name": "deptp-rg",
            "subnet": [
              {
                "address_prefix": "10.0.0.0/24",
                "id": "/subscriptions/ef5a7969-b97b-445e-ac5e-5edf463b725c/resourceGroups/deptp-rg/providers/Microsoft.Network/virtualNetworks/deptp-network/subnets/internal",
                "name": "internal"
              }
            ],
            "tags": {
              "azlearn": "azl"
            },
            "vm_protection_enabled": false
          },
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    }
  ]
}